# eval-engine

./: Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
eval_engine/: __init__.py  cheat_detection.py  config.py  metrics.py  reporter.py  runner.py
eval_engine/eval_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
examples/: example_eval.py
tests/: test_cheat_detection.py  test_metrics.py
